--- a/templates/index.html
+++ b/templates/index.html
@@ -77,25 +77,6 @@
                   </button>
                </div>
             </div>
-            <div class="dropdown all_conversation">
-               <button class="dropdown-toggle" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-               <i class="fa fa-weixin" aria-hidden="true"></i>
-               All Conversations
-               <span class="caret pull-right"></span>
-               </button>
-               <ul class="dropdown-menu" aria-labelledby="dropdownMenu2">
-                  <li><a href="#"> All Conversation </a>  <ul class="sub_menu_ list-unstyled">
-                  <li><a href="#"> All Conversation </a> </li>
-                  <li><a href="#">Another action</a></li>
-                  <li><a href="#">Something else here</a></li>
-                  <li><a href="#">Separated link</a></li>
-               </ul>
-            </li>
-                  <li><a href="#">Another action</a></li>
-                  <li><a href="#">Something else here</a></li>
-                  <li><a href="#">Separated link</a></li>
-               </ul>
-            </div>
             <div class="member_list">
                <ul class="list-unstyled">
 
@@ -108,17 +89,7 @@
          <div class="col-sm-9 message_section">
        <div class="row">
        <div class="new_message_head">
-       <div class="pull-left"><button><i class="fa fa-plus-square-o" aria-hidden="true"></i> New Message</button></div><div class="pull-right"><div class="dropdown">
-  <button class="dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-    <i class="fa fa-cogs" aria-hidden="true"></i>  Setting
-    <span class="caret"></span>
-  </button>
-  <ul class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenu1">
-    <li><a href="#">Action</a></li>
-    <li><a href="#">Profile</a></li>
-    <li><a href="#">Logout</a></li>
-  </ul>
-</div></div>
+       <div class="pull-right"><a href="/logout"><button><i class="fa fa-sign-out" aria-hidden="true"></i> Sign out</button></a></div><div class="pull-right"></div>
        </div><!--new_message_head-->
 
        <div class="chat_area">
@@ -130,8 +101,7 @@
            <textarea class="form-control" id='messageText' placeholder="type a message"></textarea>
              <div class="clearfix"></div>
                <div class="chat_bottom">
-                <a href="#" class="pull-right btn btn-success" >Send</a>
-                <button type="button" class="btn btn-default" id='sendMessage'>Default</button>
+                <button type="button" class="pull-right btn btn-success" id='sendMessage'>Send</button>
                </div>
              </div>
            </div>
