--- a/templates/index.html
+++ b/templates/index.html
@@ -22,7 +22,7 @@
 
     <script src="/static/jquery.nameBadges.js"></script>
     <script src="/static/index.js"></script>
-//     <script type="text/javascript" charset="utf-8">
+    <script type="text/javascript" charset="utf-8">
 //         $(document).ready(function() {
 
 //           function createMessage(authorName, message, time){
