--- a/templates/index.html
+++ b/templates/index.html
@@ -22,125 +22,6 @@
 
     <script src="/static/jquery.nameBadges.js"></script>
     <script src="/static/index.js"></script>
-    <script type="text/javascript" charset="utf-8">
-//         $(document).ready(function() {
-
-//           function createMessage(authorName, message, time){
-//             var html = '<li class="left clearfix">'
-//             html += '<div class="name">' + authorName +'</div>'
-//             html +='<div class="chat-body1 clearfix">'
-//             html += '<p>' + message + '</p>'
-//             html += '<div class="chat_time pull-right">' + time + '</div></div></li>'
-//             $('#messageChat').append(html)
-//             $('.name').nameBadge({
-//                 border: {
-//                           color: '#ddd',
-//                           width: 3
-//                         },
-//                 colors: ['#a3a948'],
-//                 text: '#fff',
-//                 size: 50,
-//                 margin: 5,
-//                 middlename: true,
-//                 uppercase: false
-//               });
-//           }
-
-//           function createRoomLi(name, create){
-//             var html = ''
-//             if(create){
-//             html = '<li class="left clearfix"><div class="chat-body clearfix"><div class="header_sec"><strong class="primary-font" id="roomName">'
-//             html += name
-//               html += '<button type="button" data-name='+ name +' class="pull-right btn btn-success" id="createRoomButton">Create</button></strong></div></div><p>Room with that name isn`t created. You can create room</p></li>'
-//             }else{
-//               html = '<li class="left clearfix changeRoom"><div class="chat-body clearfix"><div class="header_sec"><strong class="primary-font" id="roomName">'
-//               html += name
-//               html += '</strong></div></div></li>'
-//             }
-//             return html
-//           }
-
-//           function createRoomList(rooms, searhValue){
-//             console.log(rooms, searhValue)
-//             var html = ''
-//             if (rooms.length == 0){
-//               html += createRoomLi(searhValue, true)
-//             }else{
-//               for (var i=0; i<rooms.length; i++){
-//               html += createRoomLi(rooms[i].name, false)
-//             }
-//             }
-//             $('#chatRooms').empty();
-//             $('#chatRooms').append(html)
-//             $('#createRoomButton').click(function(e) {
-//               e.preventDefault();
-//               console.log($(this).attr('data-name'));
-//               $.ajax({
-//                 method: "POST",
-//                 url: "/create_room",
-//                 data: { roomname: $(this).attr('data-name')}
-//               }).done(function( msg ) {
-//                 console.log(msg)
-//                   createRoomListMessage(msg['message'])
-//                 });
-//               });
-//             $('.changeRoom').click(function(e) {
-//               e.preventDefault();
-//               socket.emit('change_room', {roomname: $(this).find('#roomName').text()});
-//             });
-//           }
-
-//           function createRoomListMessage(msg){
-//             var html = '<p>' + msg + '</p>'
-//             $('#chatRooms').empty();
-//             $('#chatRooms').append(html)
-//           }
-
-//           var namespace = '/test';
-//           var socket = io.connect(location.protocol + '//' + document.domain + ':' + location.port + namespace);
-
-//           socket.on('connect', function() {
-//                 // socket.emit('message', {data: 'I\'m connected!'});
-//             });
-
-//           socket.on('response', function(msg) {
-//                 console.log(msg)
-//                 if($('#chatName').text()!==msg.roomname){
-//                   $('#chatName').text(msg.roomname)
-//                   $('#messageChat').empty()
-//                 }
-//                 if ($('#chatName').text()== 'general'){
-//                   $('#leaveRoomButton').hide()
-//                 }else{
-//                   $('#leaveRoomButton').show()
-//                 }
-//                 createMessage(msg.username, msg.data, msg.datetime)
-//                 $('.chat_area').scrollTop($('.chat_area')[0].scrollHeight);
-//             });
-
-//           $('#sendMessage').click(function(e) {
-//             e.preventDefault();
-//               socket.emit('message', {data: $('#messageText').val()});
-//               $('#messageText').val('');
-//             });
-
-//           $('#searchRoom').on('input', function() {
-//             var searchValue = $(this).val()
-//             $.ajax({
-//               method: "POST",
-//               url: "/find_room",
-//               data: { roomname: searchValue}
-//             }).done(function( msg ) {
-//                 createRoomList(msg, searchValue)
-//               });
-//           });
-//           $('#leaveRoomButton').click(function(e) {
-//             e.preventDefault();
-//               socket.emit('leave');
-//             });
-
-//         });
-// </script>
 </head>
 <script src="https://use.fontawesome.com/45e03a14ce.js"></script>
 <div class="main_section">
@@ -165,32 +46,34 @@
          <!--chat_sidebar-->
 
 
-         <div class="col-sm-9 message_section">
-       <div class="row">
-         <div class="new_message_head">
-           <div class="pull-right">
-             <a href="/logout">
-              <button><i class="fa fa-sign-out" aria-hidden="true"></i> Sign out</button>
-             </a>
-           </div>
-              <button id='leaveRoomButton'><i class="fa fa-times" aria-hidden="true"></i>Leave room</button>
-         <div class="pull-left">Chat name:</div><div class="pull-left" id='chatName'></div>
-       </div><!--new_message_head-->
-
-       <div class="chat_area">
-       <ul class="list-unstyled" id='messageChat'>
-
-       </ul>
-       </div><!--chat_area-->
-          <div class="message_write">
-           <textarea class="form-control" id='messageText' placeholder="type a message"></textarea>
-             <div class="clearfix"></div>
-               <div class="chat_bottom">
-                <button type="button" class="pull-right btn btn-success" id='sendMessage'>Send</button>
-               </div>
+        <div class="col-sm-9 message_section">
+         <div class="row">
+           <div class="new_message_head">
+             <div class="pull-right">
+               <a href="/logout">
+                <button><i class="fa fa-sign-out" aria-hidden="true"></i> Sign out</button>
+               </a>
              </div>
-           </div>
-         </div> <!--message_section-->
+                <button id='leaveRoomButton'><i class="fa fa-times" aria-hidden="true"></i>Leave room</button>
+           <div class="pull-left">Chat name:</div><div class="pull-left" id='chatName'></div>
+         </div><!--new_message_head-->
+
+           <div class="chat_area">
+           <ul class="list-unstyled" id='messageChat'>
+
+           </ul>
+           </div><!--chat_area-->
+            <div class="message_write">
+                <form id='messageForm'>
+                  <textarea class="form-control" rows="5" id='messageText' placeholder="type a message"></textarea>
+                  <div class="clearfix"></div>
+                  <div class="chat_bottom">
+                    <button type="submit" class="pull-right btn btn-success" id='sendMessage'>Send</button>
+                  </div>
+                </form>
+            </div>
+          </div>
+        </div> <!--message_section-->
       </div>
    </div>
 </div>
