Add mini image to link messages

--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,7 @@
       home, about, credits... or in a good page that you want
       THANK YOU MY FRIEND!
     -->
-    <title>chat room - Bootdey.com</title>
+    <title>chat</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet">
     <script type="text/javascript" src="//code.jquery.com/jquery-1.10.2.min.js"></script>
@@ -51,7 +51,7 @@
            <div class="new_message_head">
              <div class="pull-right">
                <a href="/logout">
-                <button><i class="fa fa-sign-out" aria-hidden="true"></i> Sign out</button>
+                <button><i class="fa fa-sign-out" aria-hidden="true"></i>Sign out</button>
                </a>
              </div>
                 <button id='leaveRoomButton'><i class="fa fa-times" aria-hidden="true"></i>Leave room</button>
