Rewrite history functional

--- a/templates/index.html
+++ b/templates/index.html
@@ -91,6 +91,9 @@
       </div>
    </div>
 </div>
+<script type="text/javascript">
+  window.username = '{{context.username}}'
+</script>
 </body>
-<body>
+
 </html>
